apply plugin: 'java'
apply plugin: 'maven'
apply plugin: 'com.bmuschko.nexus'

// Development environments
apply plugin: 'idea'
apply plugin: 'eclipse'
eclipse {
     classpath {
        defaultOutputDir = new File("$buildDir/eclipse");
     }
}

group = 'org.argot-sdk'
version = '1.3.b19'
sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    maven { url "http://repo.maven.apache.org/maven2" }
}
dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.11'
}
sourceSets {
    test {
        resources {
            srcDir "src/test/resources/dictionaries"
        }
    }
}

buildscript {
    repositories {
        jcenter()
    }

    dependencies {
        classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
    }
}

modifyPom {
    project {
        name 'Argot'
        description 'A language for the Internet of Things.'
        url 'http://www.argot-sdk.org/'
        packaging 'jar'
        licenses {
            license {
                url 'https://github.com/argotsdk/argot-java/blob/master/LICENSE.TXT'
            }
        }
        scm {
            url 'https://github.com/argotsdk/argot-java'
            connection 'scm:git:https://github.com/argotsdk/argot-java.git'
            developerConnection 'scm:git@github.com:argotsdk/argot-java.git'
        }
        developers {
            developer {
                id 'oobles'
                name 'David Ryan'
            }
            developer {
                id 'danmidwood'
                name 'Dan Midwood'
            }
        }

    }
}

